# CubicRubic

./: Button.cs  CMakeLists.txt  Cubic.cs  CubicRubic.cs  CubicRubic.generated.sln  CubicRubic.h  CubicRubic.sln  CubicRubicConfig.cs  Edge.cs  FuncTool.cs  OpenGLInteractions.cpp  Program.cs  Rotation.cs  TextConfig.cs  cSharpTest.csproj  file_interaction.h  initialization.cpp  main.cpp  rotation_functions.cpp
CubicRubic/: Cubic.cs  CubicRubic.cs  CubicRubic.csproj  DrawableRubic.cs  Drawing.cs  Edge.cs  Matcher.cs  Program.cs  Rotator.cs
